285581: [Toolbar] Index not considered when adding items afterwards